--- a/catering-company.html
+++ b/catering-company.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <div class="jumbotron mb-1">
-            <h1 class="display-4 text-center">Welcome to CC we are the best in the world!</h1>    
+            <h1 class="display-4 text-center">Welcome to Lee Caterers we are the best in the world!</h1>    
         </div>
         <!--- Carousel-->
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -43,6 +43,42 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
+          <!-- Navbar with research-->
+          <nav class="navbar navbar-expand-lg navbar-light bg-info">
+            <a class="navbar-brand" href="#">Lee Caterers</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Services
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Foods and Drinks</a>
+                    <a class="dropdown-item" href="#">Cleaning</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Utensils</a>
+                  </div>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" href="#">Others</a>
+                </li>
+              </ul>
+              <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form>
+            </div>
+          </nav>
     </div>
 
 
