--- a/catering-company.html
+++ b/catering-company.html
@@ -44,7 +44,7 @@
             </a>
           </div>
           <!-- Navbar with research-->
-          <nav class="navbar navbar-expand-lg navbar-light bg-info">
+          <nav class="navbar navbar-expand-lg navbar-light bg-info mt-1">
             <a class="navbar-brand" href="#">Lee Caterers</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -79,6 +79,37 @@
               </form>
             </div>
           </nav>
+          <!-- Content -->
+          <div class="container mt-1 mb-5">
+            <div class="row text-black">
+                <div class="col-md-4 bg-info">
+                    <h2>Natural food</h2>
+                    <img src="images/food1.jpg" height="200px" width="350px" alt="">
+                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, debitis distinctio doloribus dolorum eveniet expedita impedit ipsam ipsum maxime necessitatibus nostrum officia optio quo, repellendus temporibus totam ullam unde veritatis. Adipisci autem beatae consequuntur facere neque nobis perspiciatis, praesentium! Quo?</p>
+                </div>
+                <div class="col-md-8 bg-secondary">
+                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad animi, architecto beatae commodi dicta dolores doloribus eligendi iste iusto natus nulla numquam praesentium quidem quo recusandae sit suscipit ut veniam vero vitae? Aut in nemo perspiciatis quas reiciendis? Magnam, natus.</p>
+                    <div class="row">
+                        <div class="col-md-6 bg-danger">
+                            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A architecto earum, explicabo illo laborum mollitia natus. Officiis provident sed vitae. Enim hic libero molestias nam nihil nobis porro praesentium sunt.</p>
+                        </div>
+                        <div class="col-md-6 bg-success">
+                            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores atque consectetur facere harum iure maxime molestias mollitia necessitatibus nemo, nihil perspiciatis quae quidem sequi tempore unde! Esse laboriosam nihil sequi.</p>
+                            <div class="row">
+                                <div class="col-md-6 bg-dark">
+                                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dolorem doloremque in itaque, iure libero mollitia nesciunt perspiciatis provident quam.</p>
+                                </div>
+                                <div class="col-md-6 bg-warning">
+                                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur deleniti enim id iste iure laboriosam natus nostrum recusandae similique vel!</p>
+                                </div>
+                            </div>
+                        </div>
+        
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
 
