--- a/catering-company.html
+++ b/catering-company.html
@@ -80,35 +80,58 @@
             </div>
           </nav>
           <!-- Content -->
-          <div class="container mt-1 mb-5">
+          <div class="container mt-1 mb-1">
             <div class="row text-black">
                 <div class="col-md-4 bg-info">
                     <h2>Natural food</h2>
-                    <img src="images/food1.jpg" height="200px" width="350px" alt="">
+                    <img class="center-block" src="images/food1.jpg" height="200px" width="350px" alt="">
                     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, debitis distinctio doloribus dolorum eveniet expedita impedit ipsam ipsum maxime necessitatibus nostrum officia optio quo, repellendus temporibus totam ullam unde veritatis. Adipisci autem beatae consequuntur facere neque nobis perspiciatis, praesentium! Quo?</p>
                 </div>
                 <div class="col-md-8 bg-secondary">
+                    <h2>Taste ours secrets</h2>
+                    <img class="center-block" src="images/food2.jpg" height="300px" width="350px"alt="">
                     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad animi, architecto beatae commodi dicta dolores doloribus eligendi iste iusto natus nulla numquam praesentium quidem quo recusandae sit suscipit ut veniam vero vitae? Aut in nemo perspiciatis quas reiciendis? Magnam, natus.</p>
                     <div class="row">
                         <div class="col-md-6 bg-danger">
+                            <h2>Second taste</h2>
                             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A architecto earum, explicabo illo laborum mollitia natus. Officiis provident sed vitae. Enim hic libero molestias nam nihil nobis porro praesentium sunt.</p>
+                            <img class="center-block" src="images/food3.jpg" height="250px" width="300px" alt="">
                         </div>
                         <div class="col-md-6 bg-success">
+                            <h2>third food</h2>
+                            <img class="center-block" src="images/food4.jpg" height="250px" width="340px" alt="">
                             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores atque consectetur facere harum iure maxime molestias mollitia necessitatibus nemo, nihil perspiciatis quae quidem sequi tempore unde! Esse laboriosam nihil sequi.</p>
                             <div class="row">
                                 <div class="col-md-6 bg-dark">
+                                    <h2>Fourth foods</h2>
+                                    <img class="center-block" src="images/food5.jpg" height="150px" width="150px" alt="">
                                     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dolorem doloremque in itaque, iure libero mollitia nesciunt perspiciatis provident quam.</p>
                                 </div>
                                 <div class="col-md-6 bg-warning">
+                                  <h2>Fifth food</h2>
                                     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur deleniti enim id iste iure laboriosam natus nostrum recusandae similique vel!</p>
-                                </div>
+                                    <img class="center-block" src="images/food6.jpg" height="150px" width="150px" alt="">
+                                  </div>
                             </div>
                         </div>
-        
                     </div>
                 </div>
             </div>
         </div>
+        <!-- Pagination-->
+        <nav aria-label="Page navigation example mb-5">
+          <ul class="pagination justify-content-end">
+            <li class="page-item disabled">
+              <a class="page-link" href="#" tabindex="-1">Previous</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item">
+              <a class="page-link" href="#">Next</a>
+            </li>
+          </ul>
+        </nav>
 
     </div>
 
