last css changes

--- a/catering-company.html
+++ b/catering-company.html
@@ -12,8 +12,8 @@
     <title>Catering Company</title>
 </head>
 <body>
-    <div class="container">
-        <div class="jumbotron mb-1">
+    <div class="container mt-3">
+        <div class="jumbotron mb-1 bg-jumbo">
             <h1 class="display-4 text-center">Welcome to Lee Caterers we are the best in the world!</h1>    
         </div>
         <!--- Carousel-->
@@ -44,7 +44,7 @@
             </a>
           </div>
           <!-- Navbar with research-->
-          <nav class="navbar navbar-expand-lg navbar-light bg-info mt-1">
+          <nav class="navbar navbar-expand-lg navbar-light bg-jumbo mt-1">
             <a class="navbar-brand" href="#">Lee Caterers</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -62,7 +62,7 @@
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Services
                   </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <div class="dropdown-menu bg-jumbo" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Foods and Drinks</a>
                     <a class="dropdown-item" href="#">Cleaning</a>
                     <div class="dropdown-divider"></div>
@@ -82,32 +82,32 @@
           <!-- Content -->
           <div class="container mt-1 mb-1">
             <div class="row text-black">
-                <div class="col-md-4 bg-info">
+                <div class="col-md-4 bg-first">
                     <h2>Natural food</h2>
                     <img class="center-block" src="images/food1.jpg" height="200px" width="350px" alt="">
                     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, debitis distinctio doloribus dolorum eveniet expedita impedit ipsam ipsum maxime necessitatibus nostrum officia optio quo, repellendus temporibus totam ullam unde veritatis. Adipisci autem beatae consequuntur facere neque nobis perspiciatis, praesentium! Quo?</p>
                 </div>
-                <div class="col-md-8 bg-secondary">
+                <div class="col-md-8 bg-second">
                     <h2>Taste ours secrets</h2>
                     <img class="center-block" src="images/food2.jpg" height="300px" width="350px"alt="">
                     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad animi, architecto beatae commodi dicta dolores doloribus eligendi iste iusto natus nulla numquam praesentium quidem quo recusandae sit suscipit ut veniam vero vitae? Aut in nemo perspiciatis quas reiciendis? Magnam, natus.</p>
                     <div class="row">
-                        <div class="col-md-6 bg-danger">
+                        <div class="col-md-6 bg-third">
                             <h2>Second taste</h2>
                             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A architecto earum, explicabo illo laborum mollitia natus. Officiis provident sed vitae. Enim hic libero molestias nam nihil nobis porro praesentium sunt.</p>
                             <img class="center-block" src="images/food3.jpg" height="250px" width="300px" alt="">
                         </div>
-                        <div class="col-md-6 bg-success">
-                            <h2>third food</h2>
+                        <div class="col-md-6 bg-fourth">
+                            <h2>Third food</h2>
                             <img class="center-block" src="images/food4.jpg" height="250px" width="340px" alt="">
                             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores atque consectetur facere harum iure maxime molestias mollitia necessitatibus nemo, nihil perspiciatis quae quidem sequi tempore unde! Esse laboriosam nihil sequi.</p>
                             <div class="row">
-                                <div class="col-md-6 bg-dark">
+                                <div class="col-md-6 bg-fifth">
                                     <h2>Fourth foods</h2>
                                     <img class="center-block" src="images/food5.jpg" height="150px" width="150px" alt="">
                                     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dolorem doloremque in itaque, iure libero mollitia nesciunt perspiciatis provident quam.</p>
                                 </div>
-                                <div class="col-md-6 bg-warning">
+                                <div class="col-md-6 bg-sixth">
                                   <h2>Fifth food</h2>
                                     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur deleniti enim id iste iure laboriosam natus nostrum recusandae similique vel!</p>
                                     <img class="center-block" src="images/food6.jpg" height="150px" width="150px" alt="">
@@ -120,7 +120,7 @@
         </div>
         <!-- Pagination-->
         <nav aria-label="Page navigation example mb-5">
-          <ul class="pagination justify-content-end">
+          <ul class="pagination justify-content-end bg-jumbo">
             <li class="page-item disabled">
               <a class="page-link" href="#" tabindex="-1">Previous</a>
             </li>
