--- a/catering-company.html
+++ b/catering-company.html
@@ -1,150 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-    <link rel="stylesheet" href="css/font-awesome-5.8.1.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <title>Catering Company</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+  <link rel="stylesheet" href="css/font-awesome-5.8.1.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <title>Catering Company</title>
 </head>
+
 <body>
-    <div class="container mt-3">
-        <div class="jumbotron mb-1 bg-jumbo">
-            <h1 class="display-4 text-center">Welcome to Lee Caterers we are the best in the world!</h1>    
-        </div>
-        <!--- Carousel-->
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="images/carousel1.jpg" alt="First slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="images/carousel2.jpg" alt="Second slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="images/carousel3.jpg" alt="Third slide">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-          <!-- Navbar with research-->
-          <nav class="navbar navbar-expand-lg navbar-light bg-jumbo mt-1">
-            <a class="navbar-brand" href="#">Lee Caterers</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Services
-                  </a>
-                  <div class="dropdown-menu bg-jumbo" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Foods and Drinks</a>
-                    <a class="dropdown-item" href="#">Cleaning</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Utensils</a>
-                  </div>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled" href="#">Others</a>
-                </li>
-              </ul>
-              <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-              </form>
-            </div>
-          </nav>
-          <!-- Content -->
-          <div class="container mt-1 mb-1">
-            <div class="row text-black">
-                <div class="col-md-4 bg-first">
-                    <h2>Natural food</h2>
-                    <img class="center-block" src="images/food1.jpg" height="200px" width="350px" alt="">
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, debitis distinctio doloribus dolorum eveniet expedita impedit ipsam ipsum maxime necessitatibus nostrum officia optio quo, repellendus temporibus totam ullam unde veritatis. Adipisci autem beatae consequuntur facere neque nobis perspiciatis, praesentium! Quo?</p>
-                </div>
-                <div class="col-md-8 bg-second">
-                    <h2>Taste ours secrets</h2>
-                    <img class="center-block" src="images/food2.jpg" height="300px" width="350px"alt="">
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad animi, architecto beatae commodi dicta dolores doloribus eligendi iste iusto natus nulla numquam praesentium quidem quo recusandae sit suscipit ut veniam vero vitae? Aut in nemo perspiciatis quas reiciendis? Magnam, natus.</p>
-                    <div class="row">
-                        <div class="col-md-6 bg-third">
-                            <h2>Second taste</h2>
-                            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A architecto earum, explicabo illo laborum mollitia natus. Officiis provident sed vitae. Enim hic libero molestias nam nihil nobis porro praesentium sunt.</p>
-                            <img class="center-block" src="images/food3.jpg" height="250px" width="300px" alt="">
-                        </div>
-                        <div class="col-md-6 bg-fourth">
-                            <h2>Third food</h2>
-                            <img class="center-block" src="images/food4.jpg" height="250px" width="340px" alt="">
-                            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores atque consectetur facere harum iure maxime molestias mollitia necessitatibus nemo, nihil perspiciatis quae quidem sequi tempore unde! Esse laboriosam nihil sequi.</p>
-                            <div class="row">
-                                <div class="col-md-6 bg-fifth">
-                                    <h2>Fourth foods</h2>
-                                    <img class="center-block" src="images/food5.jpg" height="150px" width="150px" alt="">
-                                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dolorem doloremque in itaque, iure libero mollitia nesciunt perspiciatis provident quam.</p>
-                                </div>
-                                <div class="col-md-6 bg-sixth">
-                                  <h2>Fifth food</h2>
-                                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur deleniti enim id iste iure laboriosam natus nostrum recusandae similique vel!</p>
-                                    <img class="center-block" src="images/food6.jpg" height="150px" width="150px" alt="">
-                                  </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Pagination-->
-        <nav aria-label="Page navigation example mb-5">
-          <ul class="pagination justify-content-end bg-jumbo">
-            <li class="page-item disabled">
-              <a class="page-link" href="#" tabindex="-1">Previous</a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-              <a class="page-link" href="#">Next</a>
-            </li>
-          </ul>
-        </nav>
-
+  <div class="container mt-3">
+    <div class="jumbotron mb-1 bg-jumbo">
+      <h1 class="display-4 text-center">Welcome to Lee Caterers we are the best in the world!</h1>
     </div>
+    <!--- Carousel-->
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="images/carousel1.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="images/carousel2.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="images/carousel3.jpg" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+    <!-- Navbar with research-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-jumbo mt-1">
+      <a class="navbar-brand" href="#">Lee Caterers</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Services
+            </a>
+            <div class="dropdown-menu bg-jumbo" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Foods and Drinks</a>
+              <a class="dropdown-item" href="#">Cleaning</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Utensils</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Others</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+    <!-- Content -->
+    <div class="container mt-1 mb-1">
+      <div class="row text-black">
+        <div class="col-md-4 bg-first">
+          <h2>Natural food</h2>
+          <img class="center-block" src="images/food1.jpg" height="200px" width="350px" alt="">
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, debitis distinctio doloribus
+            dolorum eveniet expedita impedit ipsam ipsum maxime necessitatibus nostrum officia optio quo, repellendus
+            temporibus totam ullam unde veritatis. Adipisci autem beatae consequuntur facere neque nobis perspiciatis,
+            praesentium! Quo?</p>
+        </div>
+        <div class="col-md-8 bg-second">
+          <h2>Taste ours secrets</h2>
+          <img class="center-block" src="images/food2.jpg" height="300px" width="350px" alt="">
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad animi, architecto beatae commodi
+            dicta dolores doloribus eligendi iste iusto natus nulla numquam praesentium quidem quo recusandae sit
+            suscipit ut veniam vero vitae? Aut in nemo perspiciatis quas reiciendis? Magnam, natus.</p>
+          <div class="row">
+            <div class="col-md-6 bg-third">
+              <h2>Second taste</h2>
+              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A architecto earum, explicabo
+                illo laborum mollitia natus. Officiis provident sed vitae. Enim hic libero molestias nam nihil nobis
+                porro praesentium sunt.</p>
+              <img class="center-block" src="images/food3.jpg" height="250px" width="300px" alt="">
+            </div>
+            <div class="col-md-6 bg-fourth">
+              <h2>Third food</h2>
+              <img class="center-block" src="images/food4.jpg" height="250px" width="340px" alt="">
+              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores atque consectetur
+                facere harum iure maxime molestias mollitia necessitatibus nemo, nihil perspiciatis quae quidem sequi
+                tempore unde! Esse laboriosam nihil sequi.</p>
+              <div class="row">
+                <div class="col-md-6 bg-fifth">
+                  <h2>Fourth foods</h2>
+                  <img class="center-block" src="images/food5.jpg" height="150px" width="150px" alt="">
+                  <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dolorem doloremque in
+                    itaque, iure libero mollitia nesciunt perspiciatis provident quam.</p>
+                </div>
+                <div class="col-md-6 bg-sixth">
+                  <h2>Fifth food</h2>
+                  <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur deleniti enim id
+                    iste iure laboriosam natus nostrum recusandae similique vel!</p>
+                  <img class="center-block" src="images/food6.jpg" height="150px" width="150px" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Pagination-->
+    <nav aria-label="Page navigation example mb-5">
+      <ul class="pagination justify-content-end bg-jumbo">
+        <li class="page-item disabled">
+          <a class="page-link" href="#" tabindex="-1">Previous</a>
+        </li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item">
+          <a class="page-link" href="#">Next</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
 
 
-
-
-
-
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="js/bootstrap.js"></script
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+  </script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+  </script>
+  <script src="js/bootstrap.js"></script>
 </body>
+
 </html>
-  
